feat:迁移项目至mac

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\out\\main.js",
+      "program": "${workspaceFolder}/out/main.js",
       "outFiles": [
         "${workspaceFolder}/out/**/*.js"
       ]
