:sparkles: 完善了request和response的代码提示，nice

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,7 @@
             "error",
             4
         ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
+        "linebreak-style": "off",
         "quotes": [
             "error",
             "single"
@@ -31,6 +28,7 @@
         "semi": [
             "error",
             "never"
-        ]
+        ],
+        
     }
 }
