--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "author": "yijian",
   "devDependencies": {
+    "@types/inquirer": "^8.2.1",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -21,5 +22,8 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.2"
   }
 }
