--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-explicit-any": 0,
         "indent": [
             "error",
             4
@@ -28,7 +29,6 @@
         "semi": [
             "error",
             "never"
-        ],
-        
+        ]
     }
 }
