:bug: 修复一些引用类型错误的问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,6 +99,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "test", "api"
+    "test", "api", "src/api"
   ]
 }
