--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "main": "dist/index.js",
   "bin": {
-    "aomi-yapi-convert": "./dist/index.js"
+    "aomi-yapi-convert": "./dist/update.js"
   },
   "engines": {
     "node": ">=12.0.0"
