--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/out/main.js",
+      "program": "${workspaceFolder}/out/src/main.js",
       "outFiles": [
         "${workspaceFolder}/out/**/*.js"
       ],
@@ -26,7 +26,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/out/enter/index.js",
+      "program": "${workspaceFolder}/out/src/enter/index.js",
       "console": "integratedTerminal",
       "outFiles": [
         "${workspaceFolder}/out/**/*.js"
