--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,10 @@
         "@typescript-eslint/no-explicit-any": 0,
         "indent": [
             "error",
-            4
+            4, 
+            { "SwitchCase": 1 }
         ],
+        "no-multiple-empty-lines": "error",
         "linebreak-style": "off",
         "quotes": [
             "error",
