--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=12.0.0"
   },
   "files": [
-    "dist/update.js",
+    "dist",
     "typings/index.d.ts"
   ],
   "publishConfig": {
