--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "inquirer": "^8.2.2"
+    "inquirer": "^8.2.2",
+    "prettier": "^2.7.1"
   }
 }
