--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^27.5.1",
     "rollup": "^2.70.1",
     "rollup-plugin-typescript2": "^0.31.2",
